--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ djangorestframework-simplejwt==5.3.1
 gunicorn==23.0.0
 packaging==24.2
 pillow==10.4.0
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
 PyJWT==2.9.0
 sqlparse==0.5.1
 tzdata==2024.1
